--- a/Views/StaffNames/Index.cshtml
+++ b/Views/StaffNames/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ASPVisitorManagement2020.Models.StaffNames>
+﻿@model IEnumerable<ASPVisitorManagement2020.DTO.StaffNamesDTO>
 
 @{
     ViewData["Title"] = "Index";
